--- a/package.json
+++ b/package.json
@@ -20,19 +20,22 @@
     "@angular/router": "^15.1.0",
     "ag-grid-angular": "^29.2.0",
     "ag-grid-community": "^29.2.0",
+    "audit": "^0.0.6",
+    "fix": "^0.0.3",
+    "npm": "^9.7.2",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.6.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.1.5",
-    "@angular/cli": "~15.1.5",
-    "@angular/compiler-cli": "^15.1.0",
+    "@angular/cli": "^15.2.9",
+    "@angular/compiler-cli": "^10.2.5",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
+    "karma-coverage": "^1.1.2",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "typescript": "~4.9.4"
